--- a/kakao-store/src/styles/Skeleton.css
+++ b/kakao-store/src/styles/Skeleton.css
@@ -5,7 +5,7 @@
 
 .skeleton-field-wrapper,
 .skeleton-wrapper{
-  display: grid;
+  display: flex;
 	grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
   align-items: center;
@@ -40,7 +40,6 @@
 	position: relative;
 	overflow: hidden;
 	margin: 0 auto;
-	
 }
 
 
